<resources>
    <string name="app_name">Toko Management System</string>
    <string name="app_name_short">TMS</string>
    <string name="skip">Lewati</string>
    <string name="next">Lanjut</string>
    <string name="scan_and_save_item">Scan dan Simpan Barang</string>
    <string name="scan_save_see_items_in_your_merchant">Scan, simpan dan lihat detail barang - barang yang ada di tokomu</string>
    <string name="easy_cashier_feature">Fitur Kasir yang Mudah</string>
    <string name="scan_to_speed_up_merchant_performance">Scan barcode pada barang untuk mempercepat kinerja toko</string>
    <string name="see_financial_progress">Lihat Perkembangan Finansial</string>
    <string name="income_resume_to_see_merchant_progress">Ringkasan pemasukkan dari hari ke hari untuk melihat kemajuan tokomu</string>
    <string name="start">Mulai</string>
    <string name="login">Masuk</string>
    <string name="login_with_google">Masuk dengan Google</string>
    <string name="register_with_google">Daftar dengan Google</string>
    <string name="or">atau</string>
    <string name="email">Email</string>
    <string name="email_hint">contoh@email.com</string>
    <string name="password">Password</string>
    <string name="password_hint">du13.?sm</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="confirm_password_hint">du13.?sm</string>
    <string name="password_helper">Minimal 8 karakter, terdiri dari huruf, angka, dan simbol</string>
    <string name="forgot_password">Lupa Password ?</string>
    <string name="register">Daftar</string>
    <string name="doesnt_have_account">Belum punya akun ?</string>
    <string name="already_have_account">Sudah punya akun ?</string>
    <string name="name">Nama</string>
    <string name="name_hint">Nama lengkap</string>
    <string name="data_wont_saved">Data Tidak Akan Disimpan</string>
    <string name="skip_alert_explanation"><![CDATA[Data mengenai tokomu tidak akan tersimpan di cloud sehingga tidak bisa dibackup-restore. <font color=#4641A7>Tetap lanjutkan ?</font>]]></string>
    <string name="yes">Ya</string>
    <string name="cancel">Batal</string>
    <string name="delete">Hapus</string>
    <string name="field_must_be_filled">%1$s harus terisi</string>
    <string name="email_not_valid">Email tidak valid</string>
    <string name="confirm_password_must_equal">Konfirmasi password harus sama dengan password</string>
    <string name="no_id_token_passed">No Id Token Passed</string>
    <string name="you_dont_have_linked_account_register_first">Kamu belum memiliki akun tertaut! Daftar terlebih dahulu</string>
    <string name="home">Beranda</string>
    <string name="cashier">Kasir</string>
    <string name="finance">Keuangan</string>
    <string name="profile">Profil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="press_again_to_exit_the_app">Tekan sekali lagi untuk keluar dari aplikasi</string>
    <string name="add_item">Tambah Barang</string>
    <string name="_1">1</string>
    <string name="name_photo">Nama, Foto</string>
    <string name="_2">2</string>
    <string name="price">Harga</string>
    <string name="_3">3</string>
    <string name="main_price">Harga Utama</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="barcode_explanation"><![CDATA[Arahkan kamera ke barcode yang ada pada barang. Jika barang <font color=#4641A7>tidak memiliki barcode, klik “Barang tanpa barcode”</font>]]></string>
    <string name="barcode_search_explanation">Arahkan kamera ke barcode yang ada pada barang.</string>
    <string name="item_no_barcode">Barang tanpa barcode</string>
    <string name="barcode_number"><![CDATA[Barcode: <font color=#4641A7>%1$s</font>]]></string>
    <string name="permision_denied">Permission Denied</string>
    <string name="scanner_has_been_closed">Scanner has been closed</string>
    <string name="failed_use_camera">Gagal menggunakan kamera !</string>
    <string name="item_name">Nama Barang</string>
    <string name="item_name_hint">Ketik nama barang, contoh: Beras</string>
    <string name="price_list">List Harga</string>
    <string name="create_price_of_item">Buat dan berikan harga dari barangmu.</string>
    <string name="quantity_connector">%1$f %1$s = 1 %1$s</string>
    <string name="barcode">Barcode</string>
    <string name="unit">Satuan</string>
    <string name="p">P</string>
    <string name="merchant_price">Harga Pedagang</string>
    <string name="rp_">Rp. %1$s,-</string>
    <string name="rp_no_comma">Rp. %1$s</string>
    <string name="e">E</string>
    <string name="consumer_price">Harga Eceran</string>
    <string name="special_price">Harga Khusus</string>
    <string name="special_price_item">%1$s •</string>
    <string name="add_price">Tambah Harga</string>
    <string name="save_allcaps">SIMPAN</string>
    <string name="cancel_allcaps">BATAL</string>
    <string name="delete_allcaps">HAPUS</string>
    <string name="price_connector">Penghubung Antar Harga</string>
    <string name="price_connector_hint">Contoh, 12 Buah = 1 Lusin</string>
    <string name="add_unit">tambah satuan</string>
    <string name="price_hint">Masukkan harga, contoh: 12.000</string>
    <string name="dot_symbol">•</string>
    <string name="piece">Buah</string>
    <string name="wrap">Bungkus</string>
    <string name="press_the_next_button">Tekan tombol disamping</string>
    <string name="rp_hint">Rp&#160;&#160;&#160;</string>
    <string name="add_unit_camel_case">Tambah Satuan</string>
    <string name="save">Simpan</string>
    <string name="unit_name_hint">Contoh: Dus</string>
    <string name="connector_between_price">Penghubung antar harga</string>
    <string name="barcode_cannot_empty_press_the_icon">Barcode tidak boleh kosong. Klik ikon scan disamping</string>
    <string name="no_unit_yet_click_add_unit">Belum ada satuan terpilih. Klik tambah satuan</string>
    <string name="this_part">Bagian ini</string>
    <string name="price_is_disabled">Harga dinonaktifkan</string>
    <string name="non_active">Dinonaktifkan</string>
    <string name="special_price_format">%1$s = Rp. %2$s,-</string>
    <string name="quantity">Kuantitas</string>
    <string name="this_unit_has_been_selected">Satuan ini telah dipilih, sebaiknya tidak dipilih lagi</string>
    <string name="close">Tutup</string>
    <string name="what_is_connector">Apa Itu Penghubung Antar Harga ?</string>
    <string name="connector_description">Penghubung antar harga adalah kuantitas(seberapa banyak) satuan sebelumnya sama dengan satu satuan harga ini. Contoh, 12 buah sama dengan 1 lusin, maka masukkan 12 pada input yang disediakan.</string>
    <string name="what_is_barcode">Apa Itu Barcode ?</string>
    <string name="barcode_description"><![CDATA[Barcode adalah angka unik yang terdapat pada barang. Biasanya diwakili dengan kumpulan garis hitam dengan ketebalan berbeda. <font color=#4641A7>Klik ikon scan untuk mendapatkannya.</font>]]></string>
    <string name="what_is_unit">Apa Itu Satuan ?</string>
    <string name="unit_description">Satuan adalah besaran dari suatu barang. Contoh: Bungkus, Kg, Dus</string>
    <string name="what_is_merchant_price">Apa Itu Harga Pedagang</string>
    <string name="merchant_price_description">Harga pedagang adalah harga yang diberikan khusus kepada pedagang karena barang akan dijual kembali olehnya. Kamu bisa menonaktifkan harga ini jika barang tidak mempunyai harga pedagang dengan klik ikon mata. Kamu juga bisa menambahkan harga khusus untuk kuantitas tertentu </string>
    <string name="what_is_consumer_price">Apa Itu Harga Eceran</string>
    <string name="consumer_price_description">Harga eceran adalah harga yang diberikan khusus kepada konsumen, biasanya harga konsumen lebih tinggi dari harga pedagang. Kamu bisa menonaktifkan harga ini jika barang tidak mempunyai harga pedagang dengan klik ikon mata. Kamu juga bisa menambahkan harga khusus untuk kuantitas tertentu</string>
    <string name="create_min_1_price">Buat minimal 1 harga terlebih dahulu. Klik ikon plus di kanan bawah !</string>
    <string name="select_main_price">Pilih Harga Utama</string>
    <string name="select_main_price_description"><![CDATA[Harga utama adalah harga dengan satuan yang paling dibeli. <font color=#4641A7>Klik salah satu harga untuk mengganti.</font>]]></string>
    <string name="remind_me_to_edit">Ingatkan saya untuk edit kembali</string>
    <string name="saved_item_total">Total Barang Tersimpan</string>
    <string name="barcode_item_total">Barang dengan Barcode</string>
    <string name="nonbarcode_item_total">Barang Tanpa Barcode</string>
    <string name="search_item">Cari Barang</string>
    <string name="often_used">Sering Dipakai</string>
    <string name="item_no_barcode_camel_case">Barang Tanpa Barcode</string>
    <string name="more_info">Selengkapnya</string>
    <string name="success">Berhasil</string>
    <string name="success_add_item_description"><![CDATA[Barang <font color=#4641A7>%1$s</font> berhasil disimpan]]></string>
    <string name="click_plus_sign_to_add">Klik tanda + di kanan bawah untuk menambahkan barang</string>
    <string name="no_items_yet">Belum ada barang</string>
    <string name="no_nonbarcode_items_yet">Belum ada barang tanpa barcode</string>
    <string name="mark_all_read">Tandai semua telah dibaca</string>
    <string name="last_update_on">Terakhir diubah pada %1$s</string>
    <string name="no_reminded_item">Tidak ada barang yang perlu diingatkan</string>
    <string name="item_not_found">Barang tidak ditemukan</string>
    <string name="failed_delete_item">Gagal menghapus barang</string>
    <string name="edit_item">Edit Barang</string>
    <string name="delete_this_item">Hapus Barang Ini?</string>
    <string name="are_you_sure_delete_this_item">Apakah kamu yakin ingin menghapus barang ini ?</string>
    <string name="item_is_not_changed">Barang Tidak Jadi Diubah ?</string>
    <string name="are_you_sure_not_change_this_item">Apakah kamu yakin tidak jadi mengubah barang ini ?</string>
    <string name="set_main_price">Jadikan harga utama</string>
    <string name="success_update_item"><![CDATA[<font color=#4641A7>%1$s</font> berhasil diubah]]></string>
    <string name="search">Cari</string>
    <string name="type_the_item_name_you_search">Ketik nama barang yang dicari</string>
    <string name="item_searched_no_found">Barang yang kamu cari tidak ada</string>
    <string name="load_more">Muat lebih banyak</string>
    <string name="by_item_type">Berdasarkan Tipe Barang</string>
    <string name="without_barcode">Tanpa Barcode</string>
    <string name="by_unit">Berdasarkan Satuan</string>
    <string name="filter">Filter</string>
    <string name="by_price_range">Berdasarkan Rentang Harga</string>
    <string name="from">Dari</string>
    <string name="to">Sampai</string>
    <string name="apply">Terapkan</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Pengaturan</string>
    <string name="unit_setting_description">Lihat, tambah, ubah dan hapus satuan</string>
    <string name="backup">Backup</string>
    <string name="backup_setting_description">Upload data untuk restore saat login</string>
    <string name="printer">Printer</string>
    <string name="printer_setting_description">Sambungkan dan tes printer</string>
    <string name="last_backup">Backup Terakhir</string>
    <string name="backup_schedule">Jadwal Backup</string>
    <string name="every_day">Tiap Hari</string>
    <string name="every_week">Tiap Minggu</string>
    <string name="every_month">Tiap Bulan</string>
    <string name="never">Jangan Pernah</string>
    <string name="include_image">Termasuk Gambar</string>
    <string name="finish">Selesai</string>
    <string name="total">Total</string>
    <string name="pay">Bayar</string>
    <string name="money_change">Kembalian</string>
    <string name="right_money">Uang Pas</string>
</resources>