<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="lastBackup"
            type="String" />
        <variable
            name="size"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.backup.BackupActivity"
        android:background="@color/white"
        >

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_backup_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/white"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                android:paddingHorizontal="16dp"
                >

                <ImageButton
                    android:id="@+id/btn_backup_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_arrow_left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    style="@style/TextAppearance.RubikMedium14"
                    android:textColor="@color/black_100"
                    android:text="@string/backup"
                    />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/mcv_backup_app_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="24dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.Subtitle2"
                    android:textColor="@color/black_100"
                    android:text="@string/last_backup"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    style="@style/TextAppearance.Body2"
                    android:textColor="@color/black_100"
                    android:text="@{@string/date_(lastBackup)}"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    style="@style/TextAppearance.Body2"
                    android:textColor="@color/black_100"
                    android:text="@{@string/size_(size)}"
                    android:visibility="gone"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_backup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/backup"
                    android:textAllCaps="false"
                    android:layout_marginTop="16dp"
                    app:cornerRadius="32dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    style="@style/TextAppearance.Subtitle2"
                    android:textColor="@color/black_100"
                    android:text="@string/backup_schedule"
                    />

                <RadioGroup
                    android:id="@+id/radio_grup_backup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    >

                    <RadioButton
                        android:id="@+id/radio_backup_every_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/every_day"
                        style="@style/TextAppearance.Body2"
                        android:buttonTint="@color/primary_100"
                        />

                    <RadioButton
                        android:id="@+id/radio_backup_every_week"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/every_week"
                        style="@style/TextAppearance.Body2"
                        android:buttonTint="@color/primary_100"
                        />

                    <RadioButton
                        android:id="@+id/radio_backup_every_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/every_month"
                        style="@style/TextAppearance.Body2"
                        android:buttonTint="@color/primary_100"
                        />

                    <RadioButton
                        android:id="@+id/radio_backup_never"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/never"
                        style="@style/TextAppearance.Body2"
                        android:buttonTint="@color/primary_100"
                        />

                </RadioGroup>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.Subtitle2"
                        android:textColor="@color/black_100"
                        android:text="@string/include_image"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_backup_include_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:minHeight="0dp"
                        android:checked="false"
                        android:background="@null"
                        />

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>