<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="18dp">

            <ImageButton
                android:id="@+id/ib_skip_xmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_xmark"
                android:background="@android:color/transparent"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/vector_warning"
                />

            <TextView
                android:id="@+id/tv_alert_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                style="@style/TextAppearance.Headline6"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/primary_100"
                android:text="@string/data_wont_saved"
                />

            <TextView
                android:id="@+id/tv_alert_dialog_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                style="@style/TextAppearance.Body1"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black_80"
                tools:text="@string/skip_alert_explanation"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="32dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_skip_yes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/MaterialButton.TextButton.Positive"
                    android:text="@string/yes"
                    android:layout_marginEnd="4dp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_skip_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/MaterialButton.Default.Negatif"
                    android:text="@string/cancel"
                    android:layout_marginStart="4dp"
                    />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>