<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <import type="android.text.InputType"/>
        <variable
            name="moneyChange"
            type="String" />
        <variable
            name="total"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="24dp"
        android:background="@drawable/round_corner_shape"
        >

        <include
            android:id="@+id/l_total_pay_change_money_home_indicator"
            layout="@layout/home_indicator"
            android:layout_gravity="center_horizontal"
            android:layout_width="100dp"
            android:layout_height="4dp"
            />

        <TextView
            style="@style/TextAppearance.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/finish"
            android:visibility="gone"
            android:textColor="@color/black_100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="12dp"
            >

            <TextView
                style="@style/TextAppearance.Body1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@color/black_100" />

            <TextView
                style="@style/TextAppearance.Body1"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textAlignment="textEnd"
                android:layout_height="wrap_content"
                android:text="@{total}"
                tools:text="Rp. 12.000,-"
                android:textColor="@color/black_100" />

        </LinearLayout>

        <TextView
            style="@style/TextAppearance.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pay"
            android:textColor="@color/black_80" />

        <include
            android:id="@+id/til_total_pay_change_money_pay"
            layout="@layout/layout_input_layout_no_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:inputType="@{InputType.TYPE_CLASS_NUMBER}"
            app:hint="@{@string/rp_hint}"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_total_pay_change_money_right"
            style="@style/MaterialButton.TextButton.Positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="0dp"
            android:layout_gravity="end"
            android:layout_marginTop="4dp"
            android:text="@string/right_money"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="12dp"
            >

            <TextView
                style="@style/TextAppearance.Body1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/money_change"
                android:textColor="@color/black_100" />

            <TextView
                style="@style/TextAppearance.Body1"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textAlignment="textEnd"
                android:layout_height="wrap_content"
                android:text="@{moneyChange}"
                tools:text="Rp. 12.000,-"
                android:textColor="@color/black_100" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_total_pay_change_money_finish"
            style="@style/MaterialButton.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/finish" />

    </LinearLayout>

</layout>