<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="24dp"
            android:paddingHorizontal="16dp"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_search_history"
                tools:itemCount="2"
                />

            <TextView
                android:id="@+id/tv_search_history_load_more_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                style="@style/TextAppearance.Caption"
                android:textColor="@color/primary_100"
                android:text="@string/load_more"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                style="@style/TextAppearance.Subtitle2"
                android:textColor="@color/black_100"
                android:text="@string/by_item_type"
                />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                >

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_search_history_without_barcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    app:chipBackgroundColor="@color/black_10"
                    app:chipStrokeColor="@color/black_20"
                    app:chipStrokeWidth="1dp"
                    android:textColor="@color/black_80"
                    android:fontFamily="@font/rubik_medium"
                    android:textSize="12sp"
                    android:text="@string/without_barcode"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    app:chipMinTouchTargetSize="0dp"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_search_history_barcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    app:chipBackgroundColor="@color/black_10"
                    app:chipStrokeColor="@color/black_20"
                    app:chipStrokeWidth="1dp"
                    android:textColor="@color/black_80"
                    android:fontFamily="@font/rubik_medium"
                    android:textSize="12sp"
                    android:text="@string/barcode"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    app:chipMinTouchTargetSize="0dp"
                    />

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                style="@style/TextAppearance.Subtitle2"
                android:textColor="@color/black_100"
                android:text="@string/by_unit"
                />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_search_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                >

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/tv_search_history_load_more_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                style="@style/TextAppearance.Caption"
                android:textColor="@color/primary_100"
                android:text="@string/load_more"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>